# member-compare-bot

./: .gitignore  README.md  compare.py  main.py  pyproject.toml  requirements.txt
